# bible-mcp

./: .gitignore  Cargo.toml  LICENSE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bible_mcp/: books.py  cli.py  config.py  db.py  mcp_server.py  ollama_client.py
seed/: .env.example  kaggle.ipynb  requirements.txt  seed.py
src/: books.rs  config.rs  db.rs  download.rs  embed.rs  lib.rs  main.rs  mcp_server.rs
tests/: books_tests.rs  db_tests.rs  mcp_get_passage.rs  mcp_get_verse.rs  mcp_list_tools.rs  mcp_search_verses.rs  mcp_similar_verses.rs
tests/mcp_support/: mod.rs
