[package]
name = "bible-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "bible_mcp"
path = "src/lib.rs"

[[bin]]
name = "bible-mcp"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
rmcp         = { version = "0.1", features = ["server", "transport-io"] }
rusqlite     = { version = "0.31", features = ["bundled"] }
sqlite-vec   = "0.1"
fastembed    = { version = "5", features = ["ort-load-dynamic"] }
reqwest      = { version = "0.12", features = ["stream"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
clap         = { version = "4", features = ["derive"] }
indicatif    = "0.17"
strsim       = "0.11"
dirs         = "5"
sha2         = "0.10"
anyhow       = "1"

[dev-dependencies]
tempfile   = "3"
rusqlite   = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
