[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bible-mcp"
version = "0.1.0"
description = "Local MCP server for semantic Bible search"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "ollama>=0.3",
  "sqlite-vec>=0.1",
  "httpx>=0.27",
  "click>=8.0",
  "tqdm>=4.0",
]

[project.scripts]
bible-mcp = "bible_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bible_mcp"]
